src/test/ui/consts/miri_unleashed/const_refers_to_static.stderr
warning: skipping const checks
  --> $DIR/const_refers_to_static.rs:14:5
   |
LL |     FOO.fetch_add(1, Ordering::Relaxed)
   |     ^^^

warning: skipping const checks
  --> $DIR/const_refers_to_static.rs:14:5
   |
LL |     FOO.fetch_add(1, Ordering::Relaxed)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: skipping const checks
  --> $DIR/const_refers_to_static.rs:21:17
   |
LL |     unsafe { *(&FOO as *const _ as *const usize) }
   |                 ^^^

warning: skipping const checks
  --> $DIR/const_refers_to_static.rs:26:32
   |
LL | const READ_MUT: u32 = unsafe { MUTABLE };
   |                                ^^^^^^^

warning: skipping const checks
  --> $DIR/const_refers_to_static.rs:26:32
   |
LL | const READ_MUT: u32 = unsafe { MUTABLE };
   |                                ^^^^^^^

error[E0080]: erroneous constant used
  --> $DIR/const_refers_to_static.rs:31:5
   |
LL |     MUTATE_INTERIOR_MUT;
   |     ^^^^^^^^^^^^^^^^^^^ referenced constant has errors

error[E0080]: erroneous constant used
  --> $DIR/const_refers_to_static.rs:33:5
   |
LL |     READ_INTERIOR_MUT;
   |     ^^^^^^^^^^^^^^^^^ referenced constant has errors

error[E0080]: erroneous constant used
  --> $DIR/const_refers_to_static.rs:35:5
   |
LL |     READ_MUT;
   |     ^^^^^^^^ referenced constant has errors

error: aborting due to 3 previous errors; 5 warnings emitted

For more information about this error, try `rustc --explain E0080`.
